fix horizontal scroll issue

--- a/src/index.css
+++ b/src/index.css
@@ -1171,3 +1171,12 @@ margin-right: 30px;
   object-fit: cover;
   border-radius: 12px;
 }
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
